Added html for first section

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+    <!-- Header -->
+
     <div class = "header">
         <div class="left-links">
             <ul>
@@ -22,5 +25,23 @@
             </ul>
           </div>
     </div>
+
+    <!-- First Section -->
+
+    <div class = "first-section">
+        <div class = "first-text">
+            <h1> This website is awesome </h1>
+            <p class = "first-paragraph"> 
+                This website has some subtext that goes here 
+                under the main title. It's a smaller font 
+                and the color is lower contrast.
+            </p>
+            <button class = "first-button"> Sign up </button>
+        </div>
+        <div class = "first-photo">
+            <img src="/images/house.jpg">
+        </div>
+    </div>
+
 </body>
 </html>
