Changed html for first section

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class = "first-section">
         <div class = "first-text">
             <h1> This website is awesome </h1>
-            <p class = "first-paragraph"> 
+            <p> 
                 This website has some subtext that goes here 
                 under the main title. It's a smaller font 
                 and the color is lower contrast.
@@ -39,7 +39,7 @@
             <button class = "first-button"> Sign up </button>
         </div>
         <div class = "first-photo">
-            <img src="/images/house.jpg">
+            <p>this is a placeholder for an image</p>
         </div>
     </div>
 
