--- a/index.html
+++ b/index.html
@@ -43,5 +43,37 @@
         </div>
     </div>
 
+    <!-- Second Section -->
+
+    <div class = "second-section">
+        <h2> Some random information </h2>
+        <div class = "four-columns">
+            <div class = "column">
+                <div class = "box"></div>
+                <p> 
+                this is some subtext under an illustration or image
+                </p>
+            </div>
+            <div class = "column">
+                <div class = "box"></div>
+                <p> 
+                this is some subtext under an illustration or image
+                </p>
+            </div>
+            <div class = "column">
+                <div class = "box"></div>
+                <p> 
+                this is some subtext under an illustration or image
+                </p>
+            </div>
+            <div class = "column">
+                <div class = "box"></div>
+                <p> 
+                this is some subtext under an illustration or image
+                </p>
+            </div>
+        </div>
+    </div>
+
 </body>
 </html>
