Added html for fourth section

--- a/index.html
+++ b/index.html
@@ -90,5 +90,22 @@
         </p> 
     </div>
 
+    <!-- Fourth Section -->
+
+    <div class = "fourth-section">
+        <div class = "long-box">
+            <div class = "fourth-left">
+                <h4> Call to action! It's time!</h4>
+                <p>
+                    Sign up for our product by clicking that button 
+                    right over there!
+                </p>
+            </div>
+            <div class = "fourth-right">
+                <button> Sign Up</button>
+            </div>
+        </div>
+    </div>
+
 </body>
 </html>
