--- a/index.html
+++ b/index.html
@@ -107,5 +107,11 @@
         </div>
     </div>
 
+    <!-- Footer -->
+
+    <div class = "footer">
+        <p>Copyright</p>
+    </div>
+
 </body>
 </html>
